// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCategoryForm should be created 1`] = `
<app-product-category-form
  cancel={[Function EventEmitter]}
  formBuilder={[Function FormBuilder]}
  processing="false"
  productCategory={[Function Object]}
  productCategoryForm={[Function FormGroup]}
  save={[Function EventEmitter]}
  submitted="false"
>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    novalidate=""
  >
    <section
      class="bg-white"
    >
      <div
        class="p-3"
      >
        <app-text-input
          class="ng-untouched ng-pristine ng-invalid"
          formcontrolname="name"
          ng-reflect-label="NAME"
          ng-reflect-name="name"
          ng-reflect-submitted="false"
        >
          <div
            class="form-group "
          >
            <label
              class="control-label"
            >
              NAME
            </label>
            <input
              class="form-control"
              placeholder=""
              type="text"
            />
            
            
            
            
            
            
          </div>
        </app-text-input>
      </div>
    </section>
    <app-wrapper-validation-action>
      <div
        class="d-flex justify-content-end align-items-center p-3"
      >
        <app-validation-button
          ng-reflect-confirm-disabled="false"
          ng-reflect-label-cancel="CANCEL"
          ng-reflect-label-confirm="SAVE"
        >
          <div
            class="button-validation-action text-center d-flex justify-content-end align-items-center p-3-group"
            ng-reflect-klass="button-validation-action text-"
            ng-reflect-ng-class=""
          >
            
            <button
              class="btn btn-cancel btn-lg btn-light"
              ng-reflect-klass="btn btn-cancel btn-lg"
              ng-reflect-ng-class="btn-light"
              type="button"
            >
               CANCEL 
            </button>
            
            <button
              class="btn btn-confirm btn-lg btn-primary"
              ng-reflect-klass="btn btn-confirm btn-lg"
              ng-reflect-ng-class="btn-primary"
              type="submit"
            >
              
              
              
              <span>
                SAVE
              </span>
            </button>
          </div>
        </app-validation-button>
      </div>
    </app-wrapper-validation-action>
  </form>
</app-product-category-form>
`;

exports[`ProductCategoryForm should disable the form if processing 1`] = `
<app-product-category-form
  cancel={[Function EventEmitter]}
  formBuilder={[Function FormBuilder]}
  processing={[Function Boolean]}
  productCategory={[Function Object]}
  productCategoryForm={[Function FormGroup]}
  save={[Function EventEmitter]}
  submitted="false"
>
  <form
    class="ng-untouched ng-pristine ng-invalid"
    ng-reflect-form="[object Object]"
    novalidate=""
  >
    <section
      class="bg-white"
    >
      <div
        class="p-3"
      >
        <app-text-input
          class="ng-untouched ng-pristine ng-invalid"
          formcontrolname="name"
          ng-reflect-label="NAME"
          ng-reflect-name="name"
          ng-reflect-submitted="false"
        >
          <div
            class="form-group "
          >
            <label
              class="control-label"
            >
              NAME
            </label>
            <input
              class="form-control"
              placeholder=""
              type="text"
            />
            
            
            
            
            
            
          </div>
        </app-text-input>
      </div>
    </section>
    <app-wrapper-validation-action>
      <div
        class="d-flex justify-content-end align-items-center p-3"
      >
        <app-validation-button
          ng-reflect-confirm-disabled="true"
          ng-reflect-label-cancel="CANCEL"
          ng-reflect-label-confirm="SAVE"
        >
          <div
            class="button-validation-action text-center d-flex justify-content-end align-items-center p-3-group"
            ng-reflect-klass="button-validation-action text-"
            ng-reflect-ng-class=""
          >
            
            
            <button
              class="btn btn-confirm btn-lg btn-primary"
              disabled=""
              ng-reflect-klass="btn btn-confirm btn-lg"
              ng-reflect-ng-class="btn-primary"
              type="submit"
            >
              
              <span
                class="spinner-border spinner-border-sm align-baseline"
                style="font-size: 1rem;"
              />
              
              <span>
                 LOADING
              </span>
              
            </button>
          </div>
        </app-validation-button>
      </div>
    </app-wrapper-validation-action>
  </form>
</app-product-category-form>
`;
